--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,9 @@
   <script src="assets/js/core/jquery.3.2.1.min.js"></script>
   <script src="assets/js/core/popper.min.js"></script>
   <script src="assets/js/core/bootstrap.min.js"></script>
-  <script src="assets/js/now-ui-kit.js?v=1.1.0"></script>
+  <script src="https://kit.fontawesome.com/372976a594.js" crossorigin="anonymous"></script>
+  <!-- <script src="assets/js/now-ui-kit.js?v=1.1.0"></script>
   <script src="assets/js/aos.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script> -->
 </body>
 </html>
